src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__chat_composer__tests__footer_collapse_code_empty_mode_only.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                          "
"› Ask LHA to do anything  "
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"     Identity programmer  "
