src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_full.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                               .----.   "
"                                                                                                              ( @  @ )  "
"                                                                                                              (______)  "
"                                                                                                              /\/\/\/\\ "
"                                                                                                                Echo    "
"› Ask LHA to do anything                                                                                                "
"                                                                                                                        "
"  gpt-5.4 high · 100% left · ~/Workspace/lha                                    Identity planner (shift+tab to change)  "
