src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_with_context.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› Ask LHA to do anything                                    "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"  gpt-5.4 high      Identity planner (shift+tab to change)  "
